--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,35 +9,35 @@ RUN conda update conda && \
 FROM base as dependencies
 
 ENV PATH="/opt/conda/bin:$PATH"
-WORKDIR /opt/stactools-gedi-calval-copc
+WORKDIR /opt/stactools-panama-copc
 COPY --from=base /opt/conda /opt/conda
 COPY pyproject.toml ./
-COPY src/stactools/gedi_calval_copc/__init__.py src/stactools/gedi_calval_copc/
+COPY src/stactools/panama_copc/__init__.py src/stactools/panama_copc/
 RUN apt-get -y -q update \
     && apt-get -y -q install build-essential \
     && rm -rf /var/lib/apt/lists/
 RUN pip install .
-RUN rm -r /opt/conda/lib/python3.11/site-packages/stactools/gedi_calval_copc
+RUN rm -r /opt/conda/lib/python3.11/site-packages/stactools/panama_copc
 
 
 FROM dependencies as builder
 
 ENV PATH="/opt/conda/bin:$PATH"
-WORKDIR /opt/stactools-gedi-calval-copc
+WORKDIR /opt/stactools-panama-copc
 COPY --from=base /opt/conda /opt/conda
 COPY pyproject.toml ./
 COPY src ./src
 RUN pip install -U pip \
     && pip install .
 WORKDIR /
-RUN rm -rf /opt/stactools-gedi-calval-copc
-CMD [ "stac", "gedicalvalcopc" ]
+RUN rm -rf /opt/stactools-panama-copc
+CMD [ "stac", "panamacopc" ]
 
 
 FROM dependencies as dev-dependencies
 
 ENV PATH="/opt/conda/bin:$PATH"
-WORKDIR /opt/stactools-gedi-calval-copc
+WORKDIR /opt/stactools-panama-copc
 COPY --from=base /opt/conda /opt/conda
 COPY pyproject.toml .
 RUN pip install -e '.[dev]' \
@@ -47,7 +47,7 @@ RUN pip install -e '.[dev]' \
 FROM dev-dependencies as dev-builder
 
 ENV PATH="/opt/conda/bin:$PATH"
-WORKDIR /opt/stactools-gedi-calval-copc
+WORKDIR /opt/stactools-panama-copc
 COPY --from=base /opt/conda /opt/conda
 COPY . .
-CMD [ "stac", "gedicalvalcopc" ]
+CMD [ "stac", "panamacopc" ]
